--- a/Notebooks/02_data_wrangling.ipynb
+++ b/Notebooks/02_data_wrangling.ipynb
@@ -400,7 +400,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 1** Your answer here"
+    "**A: 1** No, the Crystal Mountain resort is not duplicated if you take into account Region and state."
    ]
   },
   {
@@ -867,7 +867,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 2** Your answer here"
+    "**A: 2**  Silverton Mountain resort has an incredibly large skiable terrain area."
    ]
   },
   {
@@ -1694,22 +1694,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "string index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[287], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# save the data to a new csv file\u001b[39;00m\n\u001b[0;32m      2\u001b[0m datapath \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../data\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m----> 3\u001b[0m save_file(ski_data, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mski_data_cleaned.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, datapath)\n",
-      "File \u001b[1;32mc:\\Users\\simon\\OneDrive\\Desktop\\Data Science\\GitHub\\Guided Capstone\\DataScienceGuidedCapstone\\Notebooks\\library\\sb_utils.py:28\u001b[0m, in \u001b[0;36msave_file\u001b[1;34m(data, fname, dname)\u001b[0m\n\u001b[0;32m     26\u001b[0m yesno \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m     27\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m yesno \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mY\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m yesno \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mN\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m---> 28\u001b[0m     yesno \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDo you want to overwrite? (Y/N)\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mstrip()[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mcapitalize()\n\u001b[0;32m     29\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m yesno \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mY\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m     30\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mWriting file.  \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfpath\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[1;31mIndexError\u001b[0m: string index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# save the data to a new csv file\n",
     "datapath = '../data'\n",
