--- a/Notebooks/05_modeling.ipynb
+++ b/Notebooks/05_modeling.ipynb
@@ -1370,7 +1370,7 @@
    "metadata": {},
    "source": [
     "**A: 1**\n",
-    "Big Mountain Resort (BMR) currently charges $81.00 per ticket. The modelling suggests that a ticket price of $94.22 could be supported in the marketplace by BMR’s facilities. BMR initially asked for guidance in selecting a better ticket price to offset their recent additional operating cost of $1,540,000 for the new chairlift. They wanted to achieve this by either reducing costs without reducing the ticket price or by increasing the ticket price. I would approach suggesting changes to the business leadership by proposing the following: \n",
+    "Big Mountain Resort (BMR) currently charges 81 dollars per ticket. The modelling suggests that a ticket price of $94.22 could be supported in the marketplace by BMR’s facilities. BMR initially asked for guidance in selecting a better ticket price to offset their recent additional operating cost of $1,540,000 for the new chairlift. They wanted to achieve this by either reducing costs without reducing the ticket price or by increasing the ticket price. I would approach suggesting changes to the business leadership by proposing the following: \n",
     "\n",
     "Considerations for reducing operation costs via run closure: \n",
     "\n",
@@ -1387,7 +1387,7 @@
     "\n",
     "Considerations for increasing revenue via raising ticket price: \n",
     "\n",
-    "I. The model suggests that increasing the vertical drop by 150 feet will raise the ticket price by 10.63%, from $81.00 to $89.61, resulting in a revenue increase of $15,065,471;  \n",
+    "I. The model suggests that increasing the vertical drop by 150 feet will raise the ticket price by 10.63%, from $81 to $89.61, resulting in a revenue increase of $15,065,471;  \n",
     "\n",
     "II. However, increasing the vertical drop will require adding a new chair lift, with operating costs of $1,540,000 for this season, and an additional run (cost not provided). "
    ]
